# ProjectSynthesis

./: .dockerignore  .env.docker.example  .env.example  .gitignore  .mcp.json  .sdk_integrated  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICE  README.md  SECURITY.md  SUPPORT.md  agent_scratchpad.json  claude-progress.txt  design_architecture.md  docker-compose.yml  docker-entrypoint.sh  e2e_sampling_workflow.py  e2e_test_workflow.py  feature_list_1.json  feature_list_2.json  init.sh  version.json
backend/: .venv  CLAUDE.md  alembic_test_94be0dc4.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/app/: _version.py  config.py  database.py  main.py  mcp_server.py  models.py
backend/migrations/: add_strategy_source.sql
backend/tests/: _write_queue_helpers.py  conftest.py  test_adaptation_engine.py  test_adaptation_tracker.py  test_agent_loader.py  test_alembic_drift_regression.py  test_analysis_result_fields.py  test_audit_hook_invariant.py  test_audit_logging.py  test_auth.py  test_auth_hardening.py  test_auth_security.py  test_background_task_lifecycle.py  test_batch_persistence.py  test_batch_pipeline.py  test_bulk_delete_router.py  test_cache_service.py  test_capabilities.py  test_ci_template_guard.py  test_classification_agreement.py  test_cleanup.py  test_clusters_router.py  test_codebase_explorer.py  test_cold_path_chunking_v0_4_16.py  test_cold_path_observability_v0_4_16.py  test_cold_path_operate_v0_4_16.py  test_context_builders.py  test_context_enrichment.py  test_context_resolver.py  (+173 more)
(+875 files in other folders)
