[project]
name = "promptforge-backend"
version = "2.0.0"
description = "PromptForge v2 - Intelligent Prompt Optimization Engine"
requires-python = ">=3.14"
license = {text = "MIT"}

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py314"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
"app/prompts/*.py" = ["E501"]
