[project]
name = "project-synthesis-backend"
version = "2.0.0"
description = "Project Synthesis — Multi-Agent Development Platform"
requires-python = ">=3.14"
license = {text = "Apache-2.0"}

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py314"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
"app/prompts/*.py" = ["E501"]
